[metadata]
description = "Assorted utilities for the variant call format"
description-file = README.md
version = attr: vcfkit.__version__
url = https://www.github.com/andersenlab/vcf-kit
project_urls =
    Documentation = https://vcf-kit.readthedocs.io/en/latest/?badge=latest
    Code = https://www.github.com/andersenlab/vcf-kit
    Issue tracker = https://www.github.com/andersenlab/vcf-kit/issues
author = Daniel E. Cook